--- a/chrome/startpage/start.html
+++ b/chrome/startpage/start.html
@@ -71,8 +71,8 @@ h2.notbottom{
 		</ul>
 		<ul>
 			<li><h2>misc</h2></li>
-			<li><a href="">dotfiles</a></li>			
-			<li><a href="">soundcloud</a></li>			
+			<li><a href="https://github.com/Morgan-Rosenkranz/dotfiles">dotfiles</a></li>
+			<li><a href="https://soundcloud.com/stream">soundcloud</a></li>			
 		</ul>
 	</div>
 </body>
