--- a/chrome/startpage/index.html
+++ b/chrome/startpage/index.html
@@ -25,7 +25,7 @@
 		</ul>
 		<ul>
 			<li><h2>misc</h2></li>
-			<li><a href="https://github.com/Morgan-Rosenkranz/dotfiles">dotfiles</a></li>
+			<li><a href="https://bitbucket.org/xen0ne/mac-dotfiles/src/master/">dotfiles</a></li>
 			<li><a href="https://soundcloud.com/stream">soundcloud</a></li>			
 		</ul>
 	</div>
